src/app/resources/css/chmweb.css
div.tab {
  overflow: hidden;
  border: 1px solid #ccc;
  background-color: #f1f1f1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 999;
  height: 30px;
}

div.tab .button {
  /*display: inline;*/
  background-color: inherit;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 0 5px;
  transition: 0.3s;
  height: 30px;
  line-height: 30px;
  font-size: small;
}

div.tab .button:hover {
  background-color: #ddd;
}

div.tab .button.active {
  background-color: #ccc;
}

.tabcontent.hidden {
  display: none;
}

.tabcontent {
  display: block;
  padding: 40px 10px 10px 10px;
  border: 0;
}

body, form, ul, li, p, h1, h2, h3, h4, h5 {
  margin: 0;
  padding: 0;
}

.loading {
  background: url(../img/loading.gif) 0 0 no-repeat;
  height: 32px;
}

ul.tree {
  padding: 0 0 30px;
}

ul {
  padding-left: 15px;
}

li {
  background: url(../img/doc.png) 0 0 no-repeat;
  display: block;
  list-style: none;
  font-size: small;
}

li > a {
  line-height: 16px;
  padding: 1px 5px 1px 5px;
  margin-left: 15px;
  display: block;
}

/*noinspection CssUnusedSymbol*/
li.folder {
  background: url(../img/folderclosed.png) 0 0 no-repeat;
  padding-bottom: 0;
}

li.folder > a {
  padding-bottom: 3px;
}

li.folder > ul {
  display: none;
}

/*noinspection CssUnusedSymbol*/
li.folder.on {
  background: url(../img/folderopen.png) 0 0 no-repeat;
}

li.folder.on > ul {
  display: block;
}

#search-form {
  position: relative;
  padding-bottom: 5px;
  margin-bottom: 5px;
  border-bottom: 1px solid #ccc;
}

#search-form input[name="query"] {
  height: 25px;
  line-height: 25px;
  border: solid 1px #ccc;
  border-radius: 10px;
  padding: 0 25px 0 10px;
  margin-bottom: 5px;
  box-sizing: border-box;
  width: 100%;
}

#search-form input[name="go"] {
  position: absolute;
  right: 6px;
  top: 4px;
}

#search-form label {
  font-size: small;
}

#no-result-found {
  font-size: small;
}

#search-results {
  padding: 5px 0;
}

.hidden {
  display: none;
}

#search-results ol {
  padding: 5px 0;
  margin: 0;
}

#search-results li {
  background: none;
}

#search-results li > a {
  margin-left: 0;
}

#toggle-highlight[data-toggle="on"] {
  background-color: yellow;
}

h1 {
  border-bottom: 1px solid #c0c0c0;
  margin-bottom: 10px;
  padding: 20px;
  white-space: nowrap;
}

/*noinspection CssUnusedSymbol*/
table.filelist {
  margin: 20px;
  width: 90%;

}

table.filelist tbody tr:nth-child(odd) td {
  background-color: #eee;
}

/*noinspection CssUnusedSymbol*/
td.filesize {
  text-align: right;
  padding-left: 10px;
  padding-right: 20px;
}

td.file {
  background: url(../img/doc.png) 0 -2px no-repeat;
  padding-left: 20px;
}

/*noinspection CssUnusedSymbol*/
td.folder {
  background: url(../img/folderclosed.png) 0 -2px no-repeat;
  padding-left: 20px;
}

